; ModuleID = '/home/carl/AnghaBench/radare2/libr/anal/extr_sign.c_renameForCB.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/anal/extr_sign.c_renameForCB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctxRenameForCB = type { i8*, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* }

@R_SIGN_KEY_MAXSZ = common dso_local global i32 0, align 4
@R_SIGN_VAL_MAXSZ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"%s%s\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @renameForCB to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @renameForCB(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ctxRenameForCB*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = bitcast i8* %13 to %struct.ctxRenameForCB*
  store %struct.ctxRenameForCB* %14, %struct.ctxRenameForCB** %7, align 8
  %15 = load i32, i32* @R_SIGN_KEY_MAXSZ, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %8, align 8
  %18 = alloca i8, i64 %16, align 16
  store i64 %16, i64* %9, align 8
  %19 = load i32, i32* @R_SIGN_VAL_MAXSZ, align 4
  %20 = zext i32 %19 to i64
  %21 = alloca i8, i64 %20, align 16
  store i64 %20, i64* %10, align 8
  store i8* null, i8** %11, align 8
  %22 = load %struct.ctxRenameForCB*, %struct.ctxRenameForCB** %7, align 8
  %23 = getelementptr inbounds %struct.ctxRenameForCB, %struct.ctxRenameForCB* %22, i32 0, i32 2
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  store i32* %26, i32** %12, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = load %struct.ctxRenameForCB*, %struct.ctxRenameForCB** %7, align 8
  %29 = getelementptr inbounds %struct.ctxRenameForCB, %struct.ctxRenameForCB* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.ctxRenameForCB*, %struct.ctxRenameForCB** %7, align 8
  %32 = getelementptr inbounds %struct.ctxRenameForCB, %struct.ctxRenameForCB* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = call i32 @strlen(i32 %33)
  %35 = call i32 @strncmp(i8* %27, i32 %30, i32 %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %59, label %37

37:                                               ; preds = %3
  %38 = load i8*, i8** %5, align 8
  %39 = load %struct.ctxRenameForCB*, %struct.ctxRenameForCB** %7, align 8
  %40 = getelementptr inbounds %struct.ctxRenameForCB, %struct.ctxRenameForCB* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = call i32 @strlen(i32 %41)
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i8, i8* %38, i64 %43
  store i8* %44, i8** %11, align 8
  %45 = load i32, i32* @R_SIGN_KEY_MAXSZ, align 4
  %46 = load %struct.ctxRenameForCB*, %struct.ctxRenameForCB** %7, align 8
  %47 = getelementptr inbounds %struct.ctxRenameForCB, %struct.ctxRenameForCB* %46, i32 0, i32 0
  %48 = load i8*, i8** %47, align 8
  %49 = load i8*, i8** %11, align 8
  %50 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* %18, i32 %45, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %48, i8* %49)
  %51 = load i32, i32* @R_SIGN_VAL_MAXSZ, align 4
  %52 = load i8*, i8** %6, align 8
  %53 = call i32 (i8*, i32, i8*, i8*, ...) @snprintf(i8* %21, i32 %51, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %52)
  %54 = load i32*, i32** %12, align 8
  %55 = load i8*, i8** %5, align 8
  %56 = call i32 @sdb_remove(i32* %54, i8* %55, i32 0)
  %57 = load i32*, i32** %12, align 8
  %58 = call i32 @sdb_set(i32* %57, i8* %18, i8* %21, i32 0)
  br label %59

59:                                               ; preds = %37, %3
  %60 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %60)
  ret i32 1
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strncmp(i8*, i32, i32) #2

declare dso_local i32 @strlen(i32) #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, ...) #2

declare dso_local i32 @sdb_remove(i32*, i8*, i32) #2

declare dso_local i32 @sdb_set(i32*, i8*, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
